@@ -27,7 +27,7 @@
 
 #define NB_MAX_KEYS 120
 
-enum {	
+typedef enum {	
   TIKEY_DOWN, TIKEY_RIGHT, TIKEY_UP, TIKEY_LEFT, TIKEY_HAND, TIKEY_SHIFT, 
   TIKEY_DIAMOND, TIKEY_2ND,
   TIKEY_3, TIKEY_2, TIKEY_1, TIKEY_F8, TIKEY_W, TIKEY_S, TIKEY_Z,
@@ -46,9 +46,9 @@ enum {
   TIKEY_NEGATE, TIKEY_PERIOD, TIKEY_0, TIKEY_F4, TIKEY_Q, TIKEY_A, 
   TIKEY_ENTER1, TIKEY_MINUS, TIKEY_ON,
   TIKEY_ALPHA, TIKEY_EE, TIKEY_CATALOG, TIKEY_HOME, TIKEY_PIPE, 
-  TIKEY_VOID, /*added by tom for ti89 support*/
-  MAX_KEY // important !
-};
+  TIKEY_VOID,
+  MAX_KEY
+} TiKey;
 
 typedef struct {
    int x1;
