@@ -6,8 +6,9 @@ SubVersion: $Id$
 	- can't scroll into the code window: 
 	- window focus: ...
 	- shortcuts:
-	- key mapping pb:
-	- pb with Alpha key:
+	- key mapping pb: yes
+	- pb with Alpha key: yes
+	- no key auto-repeat: yes
 	- disasm listing:
 	- SR flags (VTi emulation):
 
